# vgi-compress

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  run_tests.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/compress-core/: Cargo.toml
crates/compress-core/src/: detect.rs  error.rs  guard.rs  lib.rs
crates/compress-core/src/codec/: brotli.rs  bzip2.rs  flate.rs  lz4.rs  mod.rs  snappy.rs  xz.rs  zstd.rs
crates/compress-core/tests/: fuzz.rs  vectors.rs
crates/compress-wasm/: Cargo.toml
crates/compress-wasm/src/: lib.rs
crates/compress-worker/: Cargo.toml
crates/compress-worker/src/: arrow_io.rs  config.rs  lib.rs  main.rs  meta.rs
crates/compress-worker/src/scalar/: codecs.rs  detect.rs  introspect.rs  mod.rs  transform.rs  version.rs
test/sql/: compress.test
wasm/: build.sh
