[workspace]
resolver = "2"
members = ["crates/compress-core", "crates/compress-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-compress"

[workspace.dependencies]
# VGI Rust SDK (worker side). Published on crates.io. Keep arrow / vgi-rpc in
# lockstep with vgi's pins so a single arrow / vgi-rpc resolves for the tree.
vgi = "0.17.0"
vgi-rpc = { version = "0.12.0", default-features = false, features = ["macros", "http"] }
arrow = { version = "59", default-features = false, features = ["ipc"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

compress-core = { path = "crates/compress-core" }

[profile.release]
opt-level = 2
strip = true
