[package]
name = "compress-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker exposing multi-codec (de)compression scalar functions over a DuckDB BLOB column: zstd, gzip, zlib, deflate, brotli, lz4, snappy, xz, lzma, bzip2 — with codec auto-detection and a decompression-bomb guard"

[lib]
name = "compress_worker"
path = "src/lib.rs"

[[bin]]
name = "compress-worker"
path = "src/main.rs"

[dependencies]
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
compress-core.workspace = true
log = "0.4"

# --- Native ---------------------------------------------------------------
# The SDK's real default features — unchanged from before the wasm split.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vgi = { workspace = true, features = ["sqlite", "transport-http"] }
vgi-rpc = { workspace = true, features = ["http"] }
env_logger = "0.11"

# --- wasm32 ---------------------------------------------------------------
# No sqlite (C) and no HTTP transport (tokio/mio/axum); the bincode stream codec
# is what the SAB byte-channel transport needs. No env_logger.
[target.'cfg(target_arch = "wasm32")'.dependencies]
vgi = { workspace = true }
vgi-rpc = { workspace = true, features = ["stream-codec"] }

[features]
default = []
# Forwarded to compress-core: route xz/lzma through the C `liblzma` backend.
liblzma = ["compress-core/liblzma"]
